--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,14 @@
 
 
 <body>
-    
+    <div class="caixa-principal">
+        <h1>Você decide o futuro da IA</h1>
+        <div class="caixa-principal"></div>
+        <div class="caixa-alternativa"></div>
+        <div class="texto-resultado">
+            <p class="texto-resultado"></p>
+            <script src="script.js"></script>
+        
+    </div>
 </body>
 </html>
