--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,6 @@
     <title>Você decide o futuro da IA</title>
  <link rel="stylesheet" href="style.css">
 </head>
-
-
 <body>
     <div class="caixa-principal">
         <h1>Você decide o futuro da IA</h1>
@@ -16,6 +14,7 @@
         <div class="texto-resultado">
             <p class="texto-resultado"></p>
             <script src="script.js"></script>
+        </div>
         
     </div>
 </body>
